; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_pack-objects.c_ofscmp.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_pack-objects.c_ofscmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_pack_object = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @ofscmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ofscmp(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.in_pack_object*, align 8
  %7 = alloca %struct.in_pack_object*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.in_pack_object*
  store %struct.in_pack_object* %9, %struct.in_pack_object** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.in_pack_object*
  store %struct.in_pack_object* %11, %struct.in_pack_object** %7, align 8
  %12 = load %struct.in_pack_object*, %struct.in_pack_object** %6, align 8
  %13 = getelementptr inbounds %struct.in_pack_object, %struct.in_pack_object* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.in_pack_object*, %struct.in_pack_object** %7, align 8
  %16 = getelementptr inbounds %struct.in_pack_object, %struct.in_pack_object* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp slt i64 %14, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %39

20:                                               ; preds = %2
  %21 = load %struct.in_pack_object*, %struct.in_pack_object** %6, align 8
  %22 = getelementptr inbounds %struct.in_pack_object, %struct.in_pack_object* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.in_pack_object*, %struct.in_pack_object** %7, align 8
  %25 = getelementptr inbounds %struct.in_pack_object, %struct.in_pack_object* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp sgt i64 %23, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %20
  store i32 1, i32* %3, align 4
  br label %39

29:                                               ; preds = %20
  %30 = load %struct.in_pack_object*, %struct.in_pack_object** %6, align 8
  %31 = getelementptr inbounds %struct.in_pack_object, %struct.in_pack_object* %30, i32 0, i32 1
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load %struct.in_pack_object*, %struct.in_pack_object** %7, align 8
  %35 = getelementptr inbounds %struct.in_pack_object, %struct.in_pack_object* %34, i32 0, i32 1
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = call i32 @oidcmp(i32* %33, i32* %37)
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %29, %28, %19
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @oidcmp(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
